--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "AyrtonBot-Md",
+"name": "Ayrton-Bot",
 "version": "2.2.0",
 "description": "Super WhatsApp Bot Multi Device",
 "master": "index.js",
